Fix border overlapping on zoom

--- a/scss/_float-label.scss
+++ b/scss/_float-label.scss
@@ -13,7 +13,7 @@
       display: block;
       position: absolute;
       background: white;
-      height: 1px;
+      height: 2px;
       top: 50%;
       left: -.2em;
       right: -.2em;
